After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 796634 - rtsp-stream: only create funnel if it didn't exist already.
rtsp-stream: only create funnel if it didn't exist already.
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-rtsp-server
unspecified
Other All
: Normal normal
: 1.15.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2018-06-19 22:36 UTC by Mathieu Duponchelle
Modified: 2018-06-21 13:24 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
rtsp-stream: only create funnel if it didn't exist already. (1.44 KB, patch)
2018-06-19 22:36 UTC, Mathieu Duponchelle
committed Details | Review

Description Mathieu Duponchelle 2018-06-19 22:36:34 UTC
See commit message
Comment 1 Mathieu Duponchelle 2018-06-19 22:36:40 UTC
Created attachment 372729 [details] [review]
rtsp-stream: only create funnel if it didn't exist already.

This precented using multiple protocols for the same stream.
Comment 2 Mathieu Duponchelle 2018-06-20 13:15:17 UTC
Attachment 372729 [details] pushed as 3b70c68 - rtsp-stream: only create funnel if it didn't exist already.
Comment 3 Mathieu Duponchelle 2018-06-21 13:24:46 UTC
(In reply to Mathieu Duponchelle from comment #2)
> Attachment 372729 [details] pushed as 3b70c68 - rtsp-stream: only create
> funnel if it didn't exist already.

Should we backport this to 1.14?